# IFTerpCrossCompileAndroidCMake

./: .gitignore  README.md  checkout_terps_and_glk.sh  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/stories/: Mid_the_Sagebrush_and_the_Cactus.gblorb
app/src/main/cpp/: .gitignore  CMakeLists.txt  hello-jni.c
app/src/main/cpp/makefiles/glulxe/: Android.mk  CMakeLists.txt
app/src/main/java/com/example/hellojni/: HelloJni.java
app/src/main/java/com/wakereality/thunderfall/: StoryRemGlkActivity.java  UserRuntimePermission.java
app/src/main/res/layout/: activity_main.xml  activity_thunderword_remote_simple.xml
app/src/main/res/values/: strings.xml
fictionengines/: .gitignore  build.gradle
fictionengines/src/androidTest/java/com/wakereality/fictionengines/: ExampleInstrumentedTest.java
fictionengines/src/main/: AndroidManifest.xml
fictionengines/src/main/cpp/: CMakeLists.txt  hello-jni.c
fictionengines/src/main/cpp/makefiles/git/: Android.mk  CMakeLists.txt
fictionengines/src/main/cpp/makefiles/glulxe/: Android.mk  CMakeLists.txt
fictionengines/src/main/cpp/makefiles/level9/: Android.mk  CMakeLists.txt
fictionengines/src/main/cpp/makefiles/magnetic/: Android.mk  CMakeLists.txt
fictionengines/src/main/cpp/makefiles/remglk/: Android.mk  CMakeLists.txt
fictionengines/src/main/java/com/wakereality/fictionengines/: CopyAssetHelper.java
fictionengines/src/main/java/com/wakereality/fictionengines/engineevents/: DataFromEngineEvent.java  DataToEngineEvent.java  EngineStateChangeEvent.java
fictionengines/src/main/java/com/wakereality/fictionengines/engineinterface/: NativeFictionEngineProcess.java
fictionengines/src/main/res/values/: strings.xml
fictionengines/src/test/java/com/wakereality/fictionengines/: ExampleUnitTest.java
